Cambios peticiones get
